// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id="default"
  />
  <a
    className="hashLink"
    data-testid="Hash Link"
    href="#default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="icon iconHidden"
    />
  </a>
  <h2
    className="headingTextWithLinkIconOffset Heading secondary"
    id="test-heading-1"
  >
    Test
  </h2>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchor anchorMargin"
    id="default"
  />
  <a
    className="hashLink"
    data-testid="Hash Link"
    href="#default"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <svg
      className="icon iconHidden"
    />
  </a>
  <h2
    className="headingTextWithLinkIconOffset Heading secondary"
    id=""
  >
    Test
  </h2>
</div>
`;
